@@ -1,5 +1,9 @@
 = Version descriptions
 
+== master
+
+- Resolves: gh#309 dashboard: hide seconds & timezone by default on the dashboard
+
 == 7.4.1
 
 - Resolves: gh#282 lower baseline to API 23 (Android 6.0), covering about 97.4% of devices
